--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
                 <button class="submit" type="submit">Masuk</button>
             </form>
+            <div>
+                <label>test</label>
+            </div>
         </div>
 
         <script src="script/script.js"></script>
