--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             </div>
             <h2>SmileDetect</h2>
             <div class="toggle">
+                <div class="toggle-indicator"></div>
                 <button id="loginTab" class="active">Login</button>
                 <button id="registerTab">Daftar</button>
             </div>
