--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="card">
             <div class="logo-box">
-                <img src="img/logo.png" alt="Logo" />
+                <img src="assets/icons/logo.png" alt="Logo" />
             </div>
             <h2>SmileDetect</h2>
             <div class="toggle">
