--- a/diagnosa.html
+++ b/diagnosa.html
@@ -5,20 +5,35 @@
   <title>SmileDetect</title>
   <link rel="stylesheet" href="css/diagnosa.css">
 </head>
-<body>
 
+<body>
 <!-- HEADER -->
 <header class="topbar">
   <div class="logo">
     <img src="assets/icons/logo.png">
-    <span>SmileDetect</span>
+    <div class="logo-text">
+      <span class="title">SmileDetect</span>
+      <span class="subtitle">
+        Temukan Diagnosa Awal dan Informasi Perawatan Gigi Lengkap.
+      </span>
+    </div>
   </div>
 
+
   <div class="user">
-    <img src="assets/icons/user.png">
-    <span>uchina dontol</span>
-    <img class="logout" src="assets/icons/logout.png">
+    <img class="user-icon" src="assets/icons/user.png">
+
+    <div class="user-info">
+      <span class="username">uchina dontol</span>
+      <span class="email">uchina@email.com</span>
+
+      <button class="logout-btn">
+        <img src="assets/icons/logout.png">
+        Keluar
+      </button>
+    </div>
   </div>
+
 </header>
 
 <!-- HERO -->
