--- a/diagnosa.html
+++ b/diagnosa.html
@@ -81,32 +81,32 @@
   <div class="symptoms">
     <!-- 24 CHECKBOX -->
     <label><input type="checkbox"> Gusi bengkak</label>
-    <label><input type="checkbox"> Gigi ngilu</label>
-    <label><input type="checkbox"> Bau mulut tak sedap</label>
     <label><input type="checkbox"> Gusi nyeri</label>
-    <label><input type="checkbox"> Gusi bernanah</label>
-    <label><input type="checkbox"> Gigi goyang</label>
-
-    <label><input type="checkbox"> Penumpukan plak/karang</label>
-    <label><input type="checkbox"> Gusi sakit saat makan</label>
-    <label><input type="checkbox"> Gusi berdarah</label>
-    <label><input type="checkbox"> Gigi berlubang</label>
-    <label><input type="checkbox"> Gigi patah</label>
-    <label><input type="checkbox"> Gigi renggang</label>
-
     <label><input type="checkbox"> Gigi sakit terus menerus</label>
-    <label><input type="checkbox"> Gigi tampak kuning</label>
+    <label><input type="checkbox"> Gusi memerah / keunguan</label>
+    <label><input type="checkbox"> Gusi ngilu</label>
+    <label><input type="checkbox"> Gusi bernanah</label>
+
+    <label><input type="checkbox"> Gigi tanpak kuning</label>
+    <label><input type="checkbox"> Nyeri saat ngunyah</label>
+    <label><input type="checkbox"> Bau mulut tak sedap</label>
+    <label><input type="checkbox"> Gigi goyang</label>
     <label><input type="checkbox"> Radang gusi</label>
-    <label><input type="checkbox"> Gusi mengkilap</label>
-    <label><input type="checkbox"> Mulut tak sedap/pahit</label>
-    <label><input type="checkbox"> Mulut menjadi kering</label>
+    <label><input type="checkbox"> Mulut nenjadi kering</label>
 
     <label><input type="checkbox"> Gusi sakit saat disentuh</label>
-    <label><input type="checkbox"> Terlihat noda hitam/coklat</label>
-    <label><input type="checkbox"> Gusi sangat gatal</label>
-    <label><input type="checkbox"> Nyeri saat mengunyah</label>
-    <label><input type="checkbox"> Gusi merah/keunguan</label>
-    <label><input type="checkbox"> Gusi turun</label>
+    <label><input type="checkbox"> Penumpukan plank/karang</label>
+    <label><input type="checkbox"> Gusi mengkilap</label>
+    <label><input type="checkbox"> Gusi sakit saat disentuh</label>
+    <label><input type="checkbox"> Gusi gigi sakit saat makan</label>
+    <label><input type="checkbox"> Gigi berlubang</label>
+
+    <label><input type="checkbox"> Mulut tak sedap / pahit</label>
+    <label><input type="checkbox"> Terlihat noda hitam, coklat atau putih pada permukaan</label>
+    <label><input type="checkbox"> Gusi berdarah</label>
+    <label><input type="checkbox"> Gigi patah</label>
+    <label><input type="checkbox"> Gigi renggang</label>
+    <label><input type="checkbox"> Gusi yang terdorong maju membuat gigi terlihat panjang</label>
   </div>
 
   <div class="actions">
